--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,10 +45,11 @@
 name: 'Terraform'
 
 on:
-  push:
-    branches:
-    - main
+#   push:
+#     branches:
+#     - main
   pull_request:
+  workflow_dispatch:
 
 jobs:
   terraform:
