--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,9 +45,9 @@
 name: 'Terraform'
 
 on:
-#   push:
-#     branches:
-#     - main
+  push:
+    branches:
+    - main
   pull_request:
   workflow_dispatch:
 
